[gd_scene load_steps=4 format=3 uid="uid://dd0g12mdrcrig"]

[ext_resource type="Texture2D" uid="uid://ma660wo5kvri" path="res://assets/ui_icons/map-editor/point_scan.png" id="1_iglmd"]
[ext_resource type="Script" uid="uid://cl20uq5y35vp8" path="res://ui/views/map-editor/object-configuration-panel/panels/world-config-panel/world_config_panel.gd" id="1_qhh2v"]

[sub_resource type="LabelSettings" id="LabelSettings_ps0lq"]
font_size = 12

[node name="WorldConfigPanel" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -906.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 3
script = ExtResource("1_qhh2v")

[node name="Content" type="BoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15
vertical = true

[node name="NameProp" type="BoxContainer" parent="Content"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="Content/NameProp"]
layout_mode = 2
text = "Name:"
label_settings = SubResource("LabelSettings_ps0lq")

[node name="NameEdit" type="LineEdit" parent="Content/NameProp"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Test"

[node name="DescProp" type="BoxContainer" parent="Content"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="Content/DescProp"]
layout_mode = 2
text = "Description:"
label_settings = SubResource("LabelSettings_ps0lq")

[node name="DescEdit" type="TextEdit" parent="Content/DescProp"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Test"
wrap_mode = 1
caret_multiple = false

[node name="Label" type="Label" parent="Content"]
layout_mode = 2
text = "Map"

[node name="MapSizeProp" type="BoxContainer" parent="Content"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="Content/MapSizeProp"]
layout_mode = 2
text = "Size:"
label_settings = SubResource("LabelSettings_ps0lq")

[node name="VectorWrapper" type="BoxContainer" parent="Content/MapSizeProp"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MapSizeXEdit" type="SpinBox" parent="Content/MapSizeProp/VectorWrapper"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
allow_greater = true
alignment = 2
suffix = "px"
custom_arrow_step = 0.1

[node name="MapSizeYEdit" type="SpinBox" parent="Content/MapSizeProp/VectorWrapper"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
allow_greater = true
alignment = 2
suffix = "px"
custom_arrow_step = 0.1

[node name="CameraPosProp" type="BoxContainer" parent="Content"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="Content/CameraPosProp"]
layout_mode = 2
text = "Initial camera position:"
label_settings = SubResource("LabelSettings_ps0lq")

[node name="VectorWrapper" type="BoxContainer" parent="Content/CameraPosProp"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CamPosXEdit" type="SpinBox" parent="Content/CameraPosProp/VectorWrapper"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
allow_greater = true
allow_lesser = true
alignment = 2
suffix = "px"
custom_arrow_step = 0.1

[node name="CamPosYEdit" type="SpinBox" parent="Content/CameraPosProp/VectorWrapper"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
allow_greater = true
allow_lesser = true
alignment = 2
suffix = "px"
custom_arrow_step = 0.1

[node name="Sep" type="Control" parent="Content/CameraPosProp"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="TakeCurrentCamPosButton" type="Button" parent="Content/CameraPosProp"]
layout_mode = 2
size_flags_horizontal = 0
text = "Take current"
icon = ExtResource("1_iglmd")

[node name="CameraZoomProp" type="BoxContainer" parent="Content"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="Content/CameraZoomProp"]
layout_mode = 2
text = "Initial zoom:"
label_settings = SubResource("LabelSettings_ps0lq")

[node name="CamZoomEdit" type="SpinBox" parent="Content/CameraZoomProp"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
step = 0.1
alignment = 2
custom_arrow_step = 0.1

[node name="Sep" type="Control" parent="Content/CameraZoomProp"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="TakeCurrentCamZoomButton" type="Button" parent="Content/CameraZoomProp"]
layout_mode = 2
size_flags_horizontal = 0
text = "Take current"
icon = ExtResource("1_iglmd")
